html, css, js 연습

--- a/main.html
+++ b/main.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="desciption"
+    content="내용"/>
+    <meta name="keyword"
+    content="웹사이트,클래스101"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
+    <script src="main.js"></script>
+
 </head>
 <body>
     
+    <div class="layout layout01" id="layout_id_01">
+        <div class="layout02" id="layout_id_02">
+            <p>내부 문단 태그</p>
+        </div>
+    </div>
+
 </body>
 </html>
